tests/NormalTests/paczka1/fuzzy1/86277792.err
Error in line 2: QKOWHfzO0cC A667 83,4
Error in line 1: A667 A932 19,4
Error in line 11: aTStZkBJj A494 14,4
Error in line 10: A667 A494 41,1
Error in line 16: QKOWHfzO0cC A667 25,16
Error in line 9: 0GuuE6D A494 0,2
Error in line 25: 0GuuE6D A267 45,7
Error in line 35: 2BV A267 49,63
Error in line 36: A667 A267 117,24
Error in line 28: qcjE9lYTT A267 69,2
Error in line 37: aTStZkBJj A494 23,6
